[package]
name = "stat_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.20"
env_logger = "0.10.0"
dotenvy = "0.15.7"
chrono = "0.4.31"